polychem/src/atoms/snapshots/polychem__atoms__composition_parser__tests__composition_errors-8.snap
---
source: polychem/src/atoms/composition_parser.rs
description: "chemical_composition(\"C3H06N4\")"
expression: out
---
  × expected a chemical formula (optionally followed by a '+' or '-' and a
  │ particle offset), or a standalone particle offset
  ├─▶   × expected an element (like Au) or an isotope (like [15N]) optionally
  │     │ followed by a number
  │   
  ╰─▶   × counts cannot start with 0
        help: a 0 value doesn't make sense here, if you've mistakenly included
      a
              leading zero, like NH02, try just NH2 instead
      
   ╭────
 1 │ C3H06N4 
   ·    ▲
   ·    ╰── expected non-zero
   ╰────

